# yt-download-ng

./: Dockerfile  LICENSE  README.md  STATUS.md  TEST_PLAN.md  WARP.md  check-job.ps1  docker-compose.yml  fix-configs.ps1  host-download.ps1  inject-ui.ps1  requirements.txt  test-api-final.ps1  test-download.ps1  test-download2.ps1  test-download3.ps1  ui-enhanced.html  ytdl.py
config/: gytmdl.json
config/profiles/: archive-lossless.json  audiobook.json  audiophile-max.json  classical.json  critical-listening.json  live-recordings.json  mobile-optimized.json  music-hq.json  reference-testing.json  vinyl-collection.json
gytmdl-patches/: cli.py  downloader.py
web-backend/: Cargo.toml
web-backend/src/: main.rs
